--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-MONGO_URI=mongodb+srv://ammar:Aa123123@cluster0.vyadiyr.mongodb.net/cloud_machines?retryWrites=true&w=majority
+MONGO_URI=mongodb://localhost/cloud_machines
 PORT=5000
